# xronos

./: .clang-tidy  CONTRIBUTING.md  Dockerfile  Earthfile  LICENSE  README.md  THIRD_PARTY_NOTICE  dev-requirements.in  dev-requirements.txt  docker-bake.hcl  pip-build-constraints.txt
cpp-sdk/: .gitignore  CMakeLists.txt  Config.cmake.in  Dockerfile  Earthfile  LICENSE  README.md  THIRD_PARTY_NOTICE  exported_symbols.txt
cpp-sdk/cmake/: config.hh.in
cpp-sdk/docs/: API.md  CMakeLists.txt  Doxyfile.in  README.md
cpp-sdk/docs/static/: custom.css
cpp-sdk/examples/: CMakeLists.txt  counter.cc  hello_world.cc  metrics.cc  reflex_game.cc  timers.cc
cpp-sdk/examples/ros-interoperability/: README.md
cpp-sdk/examples/ros-interoperability/with-xronos/: README.md  docker-compose.yml
cpp-sdk/examples/ros-interoperability/with-xronos/publisher-with-xronos/: CMakeLists.txt  Dockerfile  run.sh
cpp-sdk/examples/ros-interoperability/with-xronos/subscriber-with-xronos/: CMakeLists.txt  Dockerfile  run.sh
cpp-sdk/examples/ros-interoperability/without-xronos/: README.md  docker-compose.yml
cpp-sdk/include/xronos/: sdk.hh
cpp-sdk/include/xronos/sdk/: context.hh  element.hh  environment.hh  event_source.hh  fwd.hh  metric.hh  periodic_timer.hh  physical_event.hh  port.hh  programmable_timer.hh  reaction.hh  reactor.hh  runtime_provider.hh  shutdown.hh  startup.hh  time.hh  value_ptr.hh
cpp-sdk/include/xronos/sdk/detail/: connect.hh  source_location.hh
cpp-sdk/src/: connect.cc  context.cc  element.cc  environment.cc  metric.cc  periodic_timer.cc  physical_event.cc  port.cc  programmable_timer.cc  reaction.cc  reactor.cc  runtime_provider.cc  shutdown.cc  startup.cc  time.cc
cpp-sdk/test/: CMakeLists.txt  deadlines.cc  empty.cc  loops.cc  periodic_timers.cc  ports.cc  programmable_timers.cc  startup_and_shutdown.cc  time.cc  validation.cc
docs/: .buildinfo  (+13 more)
examples/hello-ros2-comparison/ros/hello/: package.xml  setup.py
lib/: CMakeLists.txt  Config.cmake.in  Dockerfile  Earthfile
lib/core/: CMakeLists.txt
lib/core/src/: connection_graph.cc  element.cc  element_registry.cc  reaction_dependency_registry.cc
lib/dependency-graph/: CMakeLists.txt
lib/dependency-graph/src/: dependency_graph.cc
lib/graph-exporter/: CMakeLists.txt
lib/graph-exporter/lib/: exporter.cc
lib/graph-exporter/test/: test.cc
lib/graph-messages/: .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Earthfile  build.rs
lib/graph-messages/src/: lib.rs
lib/graph-messages/xronos/messages/: reactor_graph.proto  source_info.proto
lib/graph-messages/xronos/services/: diagram_generator.proto
lib/logical-time/: CMakeLists.txt
lib/logical-time/src/: tag.cc
lib/runtime/: CMakeLists.txt
lib/runtime-default/: CMakeLists.txt
lib/runtime-default/impl/: CMakeLists.txt
lib/runtime-default/impl/cmake/: config.hh.in
lib/runtime-default/impl/lib/: action.cc  assert.cc  connection.cc  environment.cc  logical_time.cc  port.cc  reaction.cc  reactor.cc  reactor_element.cc  scheduler.cc
lib/runtime-default/src/: default_runtime.cc  default_runtime_impl.cc  runtime_model.cc  scheduler.cc
lib/runtime-interfaces/: CMakeLists.txt
lib/runtime/cmake/: config.hh.in
lib/runtime/lib/: action.cc  assert.cc  connection.cc  environment.cc  logical_time.cc  port.cc  reaction.cc  reactor.cc  reactor_element.cc  scheduler.cc  time.cc
lib/source-location/: CMakeLists.txt
lib/telemetry/: CMakeLists.txt
lib/telemetry-otel/: CMakeLists.txt
lib/telemetry-otel/lib/: common.cc  otel_metric_data_logger.cc  otel_reaction_span_logger.cc  otel_runtime_data_logger.cc  otel_telemetry_backend.cc
lib/telemetry-otel/lib/include/: common.hh
lib/telemetry-otel/test/: test_attributes.cc
lib/telemetry/lib/: attribute_manager.cc
lib/telemetry/test/: test_attributes.cc
lib/util/: CMakeLists.txt
lib/util/cmake/: config.hh.in
lib/util/src/: time_operators.cc
lib/validator/: CMakeLists.txt
lib/validator/src/: check_shutdown_reactions.cc  checks.cc
python-sdk/: .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICE  pyproject.toml
python-sdk/cpp/: cpp_sdk.cc
python-sdk/src/xronos/: __init__.py  _core.py  _cpp_sdk.pyi  experimental.py
python-sdk/src/xronos/lib/: __init__.py  _abstract_source.py  _external_input.py  _simple_source.py  _socket_input.py
python-sdk/src/xronos/test/: test_reaction.py
python-sdk/test/: test_composition.py  test_configurable.py  test_deadlines.py  test_delay.py  test_delay_and_nodelay.py  test_empty_program.py  test_exception_causality_cycle.py  test_exceptions.py  test_experimental_dynamic_elements.py  test_gain.py  test_hello.py  test_hierarchy.py  test_inherited.py  test_invalid_reaction_handler.py  test_looped_action.py  test_metrics.py  test_microsteps.py  test_nested.py  test_override_reaction.py  test_periodic_timer.py  test_physical_event.py  test_ports.py  test_programmable_timer.py  test_self_loop.py  test_stop.py  test_syntax_variants.py  test_timing.py
xronos/: .gitignore  CMakeLists.txt  Dockerfile  Earthfile  THIRD_PARTY_NOTICE  exported_symbols.txt  pyproject.toml
xronos/cpp/: CMakeLists.txt  action.cc  cpp_sdk.cc  environment.cc  metric.cc  module.cc  port.cc  reaction.cc  reactor.cc  reactor_element.cc
xronos/cpp/include/: gil_wrapper.hh  module.hh  source_info.hh
xronos/src/xronos/: __init__.py  _core.py  _cpp_sdk.pyi  _runtime.pyi
xronos/src/xronos/lib/: _abstract_source.py  _external_input.py  _simple_source.py
xronos/src/xronos/test/: test_reaction.py  test_reactor.py  test_source_infos.py
xronos/test/: __init__.py  test_composition.py  test_configurable.py  test_delay.py  test_delay_and_nodelay.py  test_duplicate_names.py  test_empty_program.py  test_exception_causality_cycle.py  test_exceptions.py  test_get_time.py  test_hello.py  test_hierarchy.py  test_inherited.py  test_looped_action.py  test_metrics.py  test_microsteps.py  test_multiple_sources_same_port.py  test_nested.py  test_periodic_timer.py  test_physical_event.py  test_ports.py  test_programmable_timer.py  test_self_loop.py  test_stop.py  test_syntax_variants.py
(+758 files in other folders)
