[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "xronos"
version = "0.9.0"
description = "Reactors for Python"
authors = [
  { name = "Christian Menard", email = "christian@xronos.com" },
  { name = "Peter Donovan", email = "peter@xronos.com" },
  { name = "Jeff C. Jensen", email = "elgeeko@xronos.com" },
  { name = "Erling Jellum", email = "erling@xronos.com" },
]
maintainers = [
  { name = "Christian Menard", email = "christian@xronos.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dashboard = [
  'xronos-dashboard==0.9.0',
]

[project.urls]
Homepage = "https://xronos.com"
Repository = "https://github.com/xronos-inc/xronos"
Documentation = "https://xronos-inc.github.io/xronos/index.html"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"

[tool.scikit-build]
build-dir = "build"
ninja.make-fallback = false
build.targets = ["_cpp_sdk"]
wheel.license-files = [
  "LICEN[CS]E*",
  "NOTICE*",
  "AUTHORS*",
  "THIRD_PARTY_NOTICE",
  "third-party-licenses/**/*",
]
sdist.cmake = true
sdist.include = ["exported_symbols.txt"]

[tool.mypy]
exclude = [
  '^.venv',
  '^build$',
  '^src/',
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pyright]
exclude = [
  ".venv",
  "build",
]
strict = ["*"]

[tool.ruff.lint]
select = ['E', 'F', 'W', 'A', 'PL', 'I', 'RUF', 'D']
ignore = ['D1']
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
